# formatting

./: .gitignore  .travis.yml  CHANGELOG.md  Formatting-Clock.html  Formatting-Examples.html  Formatting-Formatters.html  Formatting-Holey.html  Formatting-Internal.html  Formatting-ShortFormatters.html  Formatting-Time.html  Formatting.html  README-nix.md  README.md  appveyor.yml  cabal.haskell-ci  default.nix  doc-index.html  formatting.cabal  formatting.haddock  haskell-package-overrides.nix  holey-format.cabal  index-frames.html  index.html  mini_Formatting-Clock.html  mini_Formatting-Examples.html  mini_Formatting-Formatters.html  mini_Formatting-Holey.html  mini_Formatting-Internal.html  mini_Formatting-ShortFormatters.html  mini_Formatting-Time.html  mini_Formatting.html  nixpkgs.json  pinned-nixpkgs.nix  pkgname.nix  shell.nix  stack.yaml  test-ghcs
.github/workflows/: build.yml  haskell-ci.yml
bench/: bench.hs
bench/reports/: 7.1.1.html  7.1.1.txt  7.1.2.html  7.1.2.txt  7.2.0.html  7.2.0.txt
src/: Formatting.hs
src/Data/Text/: Format.hs
src/Data/Text/Format/: Functions.hs  Int.hs  Types.hs
src/Formatting/: Buildable.hs  Clock.hs  Combinators.hs  Examples.hs  Formatters.hs  FromBuilder.hs  Holey.hs  Internal.hs  ShortFormatters.hs  Time.hs
src/Formatting/Internal/: Raw.hs
src/Text/: Format.hs
src/Text/Format/: Formatters.hs  Holey.hs  ShortFormatters.hs
test/: Spec.hs
